--- a/rwa-assignment/package.json
+++ b/rwa-assignment/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "iron-session": "^8.0.4",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "next": "15.0.3",
