--- a/rwa-assignment/package.json
+++ b/rwa-assignment/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
-    "@mui/material": "^6.1.8",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.2.0",
     "bcryptjs": "^2.4.3",
+    "email-validator": "^2.0.4",
     "iron-session": "^8.0.4",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
